igw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.myvpc.id

  tags = { 
    Name = "igw"
  }
}
